--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.56.1",
     "react-redux": "^9.2.0",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
